--- a/lane_detection_project/vanishing point detection.ipynb
+++ b/lane_detection_project/vanishing point detection.ipynb
@@ -18,18 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Perform edge detection\n",
     "def hough_transform(img):\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)  # Convert image to grayscale\n",
-    "    kernel = np.ones((15, 15), np.uint8)\n",
+    "    kernel = np.ones((7, 7), np.uint8)\n",
     "\n",
     "    opening = cv2.morphologyEx(gray, cv2.MORPH_OPEN, kernel)  # Open (erode, then dilate)\n",
     "    edges = cv2.Canny(opening, 50, 150, apertureSize=3)  # Canny edge detection\n",
-    "    lines = cv2.HoughLines(edges, 1, np.pi / 180, 200)  # Hough line detection\n",
+    "    lines = cv2.HoughLines(edges, 1, np.pi / 180, 100)  # Hough line detection\n",
     "\n",
     "    hough_lines = []\n",
     "    # Lines are represented by rho, theta; converted to endpoint notation\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -146,11 +146,65 @@
      "output_type": "stream",
      "text": [
       "vpimg/input\\1.jpg\n",
+      "Best Cell: (150.0, 950.0)\n",
+      "Best Cell: (250.0, 850.0)\n",
+      "Best Cell: (450.0, 650.0)\n",
+      "Best Cell: (450.0, 750.0)\n",
+      "Best Cell: (650.0, 550.0)\n",
       "vpimg/input\\2.jpg\n",
+      "Best Cell: (28.0, 196.0)\n",
+      "Best Cell: (28.0, 364.0)\n",
+      "Best Cell: (28.0, 532.0)\n",
+      "Best Cell: (84.0, 252.0)\n",
+      "Best Cell: (140.0, 252.0)\n",
+      "Best Cell: (196.0, 252.0)\n",
+      "Best Cell: (252.0, 252.0)\n",
+      "Best Cell: (420.0, 308.0)\n",
+      "Best Cell: (476.0, 308.0)\n",
+      "Best Cell: (532.0, 308.0)\n",
       "vpimg/input\\3.jpg\n",
-      "vpimg/input\\3.jpg\n",
-      "Best Cell: (661.5, 248.5)\n",
-      "vpimg/input\\4.jpg\n"
+      "Best Cell: (36.0, 108.0)\n",
+      "Best Cell: (36.0, 180.0)\n",
+      "Best Cell: (36.0, 252.0)\n",
+      "Best Cell: (108.0, 108.0)\n",
+      "Best Cell: (108.0, 180.0)\n",
+      "Best Cell: (108.0, 252.0)\n",
+      "Best Cell: (540.0, 252.0)\n",
+      "Best Cell: (612.0, 252.0)\n",
+      "Best Cell: (684.0, 252.0)\n",
+      "vpimg/input\\4.jpg\n",
+      "Best Cell: (36.0, 180.0)\n",
+      "Best Cell: (108.0, 612.0)\n",
+      "Best Cell: (108.0, 684.0)\n",
+      "Best Cell: (468.0, 180.0)\n",
+      "Best Cell: (540.0, 180.0)\n",
+      "Best Cell: (684.0, 252.0)\n",
+      "vpimg/input\\5.jpg\n",
+      "Best Cell: (73.0, 1533.0)\n",
+      "Best Cell: (219.0, 1533.0)\n",
+      "Best Cell: (511.0, 1241.0)\n",
+      "Best Cell: (657.0, 1241.0)\n",
+      "Best Cell: (1241.0, 949.0)\n",
+      "Best Cell: (1387.0, 803.0)\n",
+      "Best Cell: (1533.0, 803.0)\n",
+      "vpimg/input\\6.jpg\n",
+      "Best Cell: (54.0, 162.0)\n",
+      "Best Cell: (54.0, 486.0)\n",
+      "Best Cell: (54.0, 594.0)\n",
+      "Best Cell: (54.0, 918.0)\n",
+      "Best Cell: (270.0, 810.0)\n",
+      "Best Cell: (378.0, 594.0)\n",
+      "Best Cell: (486.0, 486.0)\n",
+      "Best Cell: (486.0, 594.0)\n",
+      "Best Cell: (594.0, 378.0)\n",
+      "Best Cell: (594.0, 486.0)\n",
+      "Best Cell: (810.0, 270.0)\n",
+      "Best Cell: (810.0, 378.0)\n",
+      "Best Cell: (918.0, 270.0)\n",
+      "vpimg/input\\7.jpg\n",
+      "Best Cell: (18.0, 18.0)\n",
+      "Best Cell: (18.0, 198.0)\n",
+      "Best Cell: (342.0, 198.0)\n"
      ]
     }
    ],
@@ -168,8 +222,7 @@
     "                random_sample = sample_lines(hough_lines, 100)\n",
     "                intersections = find_intersections(random_sample)\n",
     "                if intersections:\n",
-    "                    print(filepath)\n",
-    "                    grid_size = min(img.shape[0], img.shape[1]) // 100\n",
+    "                    grid_size = min(img.shape[0], img.shape[1]) // 10\n",
     "                    vanishing_point = find_vanishing_point(img, grid_size, intersections)\n",
     "                    filename = 'vpimg/output/' + os.path.splitext(file)[0] + '_center' + '.jpg'\n",
     "                    cv2.imwrite(filename, img)"
